syntax = "proto3";

option csharp_namespace = "ChatClientProvider.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Chat{
    rpc SendMessage(stream ChatMessage) returns(stream ChatMessage);
    rpc LogOut(User) returns (LogResponse);
	rpc LogIn(User) returns (LogResponse);
	rpc GetAllUsers(google.protobuf.Empty) returns (stream User);
}

message ChatMessage{
    User sender=1;
    string content=2;
    google.protobuf.Timestamp dateTimeStamp=3;
}

message User{
	string ID=1;
    string name=2;
}

message LogResponse{
	Status status = 1;

	enum Status{
		CONNECTED = 0;
		DISCONNECTED = 1;
	}
}